[package]
name = "rushdown-definition-list"
version = "0.9.1"
edition = "2021"
rust-version = "1.87"
description = "Definition list extension for rushdown markdown parser"
documentation = "https://docs.rs/rushdown-definition-list"
homepage = "https://github.com/yuin/rushdown-definition-list"
repository = "https://github.com/yuin/rushdown-definition-list"
readme = "README.md"
keywords = ["markdown", "commonmark"]
license = "MIT"
categories = ["text-processing"]
resolver = "2"

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = 'abort'

[features]
default = ["std"]
# std = ["rushdown/default", "rushdown/pp-ast"]
std = ["rushdown/default"]
alloc = []
no-std = ["alloc", "rushdown/no-std"]

[dependencies]
rushdown = { version = "0.17.0", default-features = false}
